# MandelbrotSet

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  main.cpp
Lib/: CMakeLists.txt  Core.cpp  Core.h  Defines.h  GLObject.h  RenderState.cpp  RenderState.h  Renderer.cpp  ShaderProgram.cpp  ShaderProgram.h  Texture1D.cpp  Texture1D.h  VertexArray.h  Window.cpp  Window.h
Mandelbrot_Set/: CMakeLists.txt  RenderState.cpp  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  Window.cpp  Window.h
assets/shaders/: frag.frag  vert.vert
